--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,40 @@
-
+.TrafficLight {
+  height: 300px;
+  width: 80px;
+  margin-left: 20px;
+  margin-top: 20px;
+  background-color: black;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.RedLight {
+  height: 50px;
+  margin-top: 22px;
+  margin-left: 15px;
+  width: 50px;
+  background-color: red;
+  border-radius: 25px;
+}
+.YellowLight {
+  height: 50px;
+  margin-top: 30px;
+  margin-left: 15px;
+  width: 50px;
+  background-color: yellow;
+  border-radius: 25px;
+}
+.GreenLight {
+  height: 50px;
+  margin-top: 30px;
+  margin-left: 15px;
+  width: 50px;
+  background-color: green;
+  border-radius: 25px;
+}
+.glow {
+  box-shadow: #f5f5f5 0px 0px 7px 7px;
+}
 /* 
 
     You can write your own styles here...
